--- a/src/App.css
+++ b/src/App.css
@@ -458,14 +458,43 @@ body {
   scrollbar-width: none !important; /* Firefox */
   overflow: -moz-hidden-un scroll; /* fallback */
 }
+
 .no-scrollbar::-webkit-scrollbar {
   width: 0 !important;
   height: 0 !important;
   display: none !important; /* Chrome, Safari, Opera */
 }
+
 .no-scrollbar::-webkit-scrollbar-thumb {
   background: transparent !important;
 }
+
 .no-scrollbar::-webkit-scrollbar-track {
   background: transparent !important;
+}
+
+.services_container {
+  background-image: url("./assets/services_img.jpg");
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 30px;
+  font-family: "Alegreya", serif;
+  background-blend-mode: darken;
+  background-color: #123f5292;
+}
+
+.hiw_container {
+  background-image: url("./assets/hiw.jpg");
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 30px;
+  font-family: "Alegreya", serif;
+  background-blend-mode: darken;
+  background-color: #123f5292;
 }
