--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,7 @@
 
 body {
   background-color: var(--bg-primary);
-  font-family: "Alegreya", serif;
+  font-family: "Alegreya Sans", sans-serif;
 }
 
 .header {
