--- a/src/App.css
+++ b/src/App.css
@@ -151,7 +151,6 @@
 body {
   background-color: var(--bg-primary);
   font-family: "Alegreya Sans", sans-serif;
-  
 }
 
 .header {
@@ -197,6 +196,7 @@ body {
   .home_bg_slide {
     background-size: cover;
     background-position: center center;
+    background-blend-mode: normal;
   }
 }
 
